--- a/gb/9/9/23/n2665536.md
+++ b/gb/9/9/23/n2665536.md
@@ -1,11 +1,11 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/tjvrql262/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/tjvrql262/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/tjvrql262/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>【新纪元】窃国六十年 中共十大恶行榜</h2>
 
 <h6></h6>
 <hr>
-<p>【大纪元9月23日讯】<b>中共执政六十年在五千年历史长河中只是一瞬间，但对于生活在其中的几代人而言却意味着一生。哪怕中共一个细小的恶行，都会让人付出毕生的代价，中共自一九四九年在中国大陆建政以来，其政劣迹斑斑。其罪恶行累累，确令人有罄竹难书之叹。中共恶行的十大排名榜，其实只是从相对整体的大视野入手，略述其非，难免挂一漏万。</b></p>
+	<p>【大纪元9月23日讯】<b>中共执政六十年在五千年历史长河中只是一瞬间，但对于生活在其中的几代人而言却意味着一生。哪怕中共一个细小的恶行，都会让人付出毕生的代价，中共自一九四九年在中国大陆建政以来，其政劣迹斑斑。其罪恶行累累，确令人有罄竹难书之叹。中共恶行的十大排名榜，其实只是从相对整体的大视野入手，略述其非，难免挂一漏万。</b></p>
 <p>最近三十年以来，中共每每宣传其经济高速发展、然而，哪怕是腐败无能的慈禧时代，中国对全球经济的贡献在40％以上，而如今拥有全球20％人口的中国，在世界经济的份额只占5％。二零零三年在全球一百五十七个国家人均GDP排名中，中国排一百一十位，而没有中共的香港、台湾却排在了二十一和三十五位。</p>
 <p>表面上看，中共现在奉行的是政治上的马列主义，经济上的资本主义，但中共实质依然是邪恶的共产主义。几十年来，中共不但搞计划经济来控制物品的生产，还搞了计划生育控制人的产量。中国人口增加不但减少了几亿，令老年化成为未来二十年的大问题，而且至少三千万个灵魂在娘胎里就被扼杀了，而出生的男女婴儿比例也严重失调到1.2：1以上，有人推算到二零三零年，中国适龄未婚男女的比例可能高达5：1，几千万光棍带来的不安定因素让人担忧。</p>
 <p>然而等不到光棍问题出现，中国就会面临更大的灭顶之灾：严重的环境污染已使很多地方成为人类不宜居住之地。昔日的蓝天白云、绿水青山已被每年10％左右的血泪GDP增长变成了毒气肆虐、浊水横流、癌症村星罗密布的污染大国。以水为例，目前中国四分之三的河流鱼类无法生存，人们饮用的地下水污染在十几年前就超过了三分之一，全国缺水现状越演越烈。</p>
@@ -19,7 +19,7 @@
 <p>说起中共恶行，可谓罪行累累，罄竹难书。下面只是个简单排序，愿有助于“不识庐山真面目”的人能跳出来，用基本的善恶观念来衡量这六十年中共的所作所为。◇ </p>
 <p>=================================================================================</p>
 <p><b>恶行第10名 六四屠杀</b></p>
-<p align="center"><img src="http://epochweek.com/141/28-01.jpg"><br /><font size=2>一九八九年六月四日中共向学生开枪，血洗天安门。（AFP）</p>
+<p align="center"> <br /><font size=2>一九八九年六月四日中共向学生开枪，血洗天安门。（AFP）</p>
 <p></font></p>
 <p><b><font size="5" color="#008080">在</font></b>海外提起“六四事件”，不但华人人人皆知，西方人也基本家喻户晓。然而走在北京大街上，假如问几个八十后或九十后，他们中绝大多数都是一头雾水。二十年的信息封锁仿佛已成为千万年。中共称事件中两百四十一人死亡，但中国红十字会称有两、三千人死亡。</p>
 <p>刘先生当时正在北京读书，他回忆说：一九八九年，老百姓在经历价格闯关、物价上涨的同时，政治上相对宽松，主要是胡耀邦提出要“民主、自由、宽松、和谐”，没想到他被中共元老以“资产阶级自由化”撤职后，四月十五日突然死去，于是纪念活动演变成了全国抗议。</p>
@@ -33,7 +33,7 @@
 <p>由于事件发生在中国窗口天安门，在全球造成巨大影响，但从事件死亡人数，涉及范围来衡量，都远远不及中共其他恶行，故排在中共十大恶行的最末。◇</p>
 <p>==================================================================================</p>
 <p><b>恶行第9名 反右诛心</b></p>
-<p align="center"><img src="http://epochweek.com/141/29-01.jpg"><br /><font size=2>反右以后，中国社会的良心阶层消失了，知识份子仗义执言、舍身取义的传统精神，被墙头草随风倒的双重人格所取代，再也没人敢从思想上谴责中共暴政了。 （AFP）</p>
+<p align="center"> <br /><font size=2>反右以后，中国社会的良心阶层消失了，知识份子仗义执言、舍身取义的传统精神，被墙头草随风倒的双重人格所取代，再也没人敢从思想上谴责中共暴政了。 （AFP）</p>
 <p></font></p>
 <p><b><font size="5" color="#008080">二</font></b>零零七年北京六十一位幸存的前“右派分子”用颤巍巍的手联名书写公开信，要求中共明确宣布反右不是扩大化了，而是从根本上错了，中共应该公开道歉并给予国家赔偿。尽管“往事并不如烟”，但至今反右运动连被公开谈及的机会都没有。</p>
 <p>一九五七年间，由于担心中共的统治也出现匈牙利式的危机，毛泽东想借整治知识份子来巩固对人思想的绝对统治，于是中共以“百花齐放、百家争鸣”“帮助共产党整风”为由，邀请民众给党提意见。正如毛泽东在一篇社论中所说：“让大家鸣放，有人说是阴谋，我们说，这是阳谋。因为事先告诉了敌人：牛鬼蛇神只有让它们出笼，才好歼灭它们。”</p>
@@ -46,7 +46,7 @@
 <p>反右虽然涉及数百万人，但主要触及的是中国的知识精英，从此敢于“文死谏”、充当道德楷模、社会良心的“士大夫”阶层消失了，中共开始对中国实行绝对严厉的言论和思想控制，杀人与诛心并用，真正从思想上绑架了中国人，故而入选恶行排行榜第九。◇</p>
 <p>===================================================================================</p>
 <p><b>恶行第8名 民族仇恨激化</b></p>
-<p align="center"><img src="http://epochweek.com/141/30-01.jpg"><br /><font size=2>二零零八年三月煽动仇恨的中共出兵镇压西藏，高唱“祖国统一”的共产党，实为民族分裂的制造者。（AFP）</p>
+<p align="center"> <br /><font size=2>二零零八年三月煽动仇恨的中共出兵镇压西藏，高唱“祖国统一”的共产党，实为民族分裂的制造者。（AFP）</p>
 <p></font></p>
 <p><b><font size="5" color="#008080">中</font></b>国是个多民族的国家，在历史上，中国少数民族和中国主体的关系，往往决定了政权的发展和稳定。中共总是标榜香港回归的“一国两制”是其创举，实际上，中国几千年从来都是多民族、多体制并存的一国多制。中共执政六十年，无论藏、蒙、回、维，都多次反抗中共暴政，此起彼伏、至今不止，其冲突规模之广、彼此仇恨之深，历史上罕见，使得未来中国的和平发展道路维艰。</p>
 <p>今年七月五日，乌鲁木齐发生的维汉仇杀震惊全球，数百人在暴力事件中遇难。中共归罪于海外流亡组织的操控，但如果没有仇恨的长期积累，谁能煽动起如此大规模冲突呢？去年三月十四日拉萨事件也是如此，表面上看是藏族、维族人手拿石头、木棍、菜刀等袭击汉人，或放火焚烧车辆和建筑，但事件的真正导火索是积累了几十年的民族仇恨。</p>
@@ -58,7 +58,7 @@
 <p>由于通婚和对少数民族在高考、就业、提职和生育方面的优惠政策，只要有非汉族血统的人都自称少数民族。虽然少数民族人口不到全国的10％，但自治区所在国土面积占了全国的64％。由于中共暴政激起的民族仇恨正严重影响国家的稳定，这使其名列恶行榜第八。◇</p>
 <p>=====================================================================================</p>
 <p><b>恶行第7名 出卖领土</b></p>
-<p align="center"><img src="http://epochweek.com/141/31-01.jpg"><br /><font size=2>一九九九年十二月十日，江泽民与叶利钦签定中俄国界线东西两段的叙述议定书，将一百多万平方公里领土划入俄国境内。（AFP）</font></p>
+<p align="center"> <br /><font size=2>一九九九年十二月十日，江泽民与叶利钦签定中俄国界线东西两段的叙述议定书，将一百多万平方公里领土划入俄国境内。（AFP）</font></p>
 <p><b><font size="5" color="#008080">提</font></b>起《血染的风采》这首歌，不少人还记得一九七九年对越自卫反击战中牺牲的英雄：“也许我倒下再不能起来，你是否还要永久的期待？如果是这样，你不要悲哀，共和国的旗帜上有我们血染的风采……”然而悲哀也没用，当年邓小平为煽动士兵而题词的“法卡山，英雄山”，如今却被中共拱手相让成为了越南领土。不光中越边境如此，中苏之间的“还我失地”，中印之间的“还我藏南”，中日之间的“还我钓鱼岛”，那些为国捐躯的战士们都已成为异国他乡的孤魂野鬼了。</p>
 <p>中共历来以国家保卫者的身份自居，但近年来曝光的史料无一例外的证实了中共是中华民族历史上最大的卖国贼。中共数十年来高喊解放台湾，借此扮演着民族主义和爱国主义的卫道士，然而统一是假，维护中共利益是真。下面是几个简单例子。</p>
 <p>一九七零年代当日本首相田中角荣访问中国、就二战日本侵略向中国人民谢罪时，毛泽东说了一句经典名言：“谢谢你们侵略中国，你们侵略了中国才有我们的胜利。”此前在一九五零年一月毛泽东访问莫斯科时，签署了《中苏联合公报》等六十六项条约、协定、议定书和补充协定，出卖了相当于七分之一中国领土、一百五十六万平方公里的外蒙古、还有十七万平方公里的唐努乌梁海、一百六十六万平方公里的新疆、一百万平方公里的中国东北、一百五十万平方公里外东北及外西北，总共五百八十八万平方公里，相当于一百六十多个台湾面积。</p>
@@ -68,7 +68,7 @@
 <p>中共从小灌输民众说中国“地大物博”，然而经过这六十年的蚕食鲸吞，中国人均国土面积十二点四亩，只是世界人均国土面积的27.8％。虽然中共竭力掩盖，但其出卖恶行早晚会被民众知晓。中国人重视“国与家”，如今家园被出卖，民众的愤慨自然将其送上恶行排行榜之七。◇</p>
 <p>=====================================================================================</p>
 <p><b>恶行第6名 制度性腐败</b></p>
-<p align="center"><img src="http://epochweek.com/141/32-01.jpg"><br /><font size=2>中共贪官们白天大讲特讲“廉洁奉公”，晚上就去“贪污受贿，声色 犬马”。（AFP）</p>
+<p align="center"> <br /><font size=2>中共贪官们白天大讲特讲“廉洁奉公”，晚上就去“贪污受贿，声色 犬马”。（AFP）</p>
 <p></font></p>
 <p><b><font size="5" color="#008080">说</font></b>起今日中共官场的腐败，百姓有个比方：拉出去挨个枪毙肯定有冤枉的，隔一个枪毙一个就会有大量漏网的。据官方统计，中国有两千万党政官员在位，二十多年已有八百多万人被查实犯有腐败罪行。目前人们公认的官员腐败率超过三分之二，中纪委也曾承认，县级干部中存在经济、作风等问题的至少80％。</p>
 <p>比如今年八月七日，英国广播电台在同一天七条全球要闻中就有三条涉及巨额贪腐。北京首都机场前董事长李培英贪污受贿上亿人民币，核工业集团总经理康日新受贿挪用十八亿人民币，国美电器创办人黄光裕夫妇在证券交易中的欺诈行为使香港法庭冻结其十六点六亿港元的资产。过去贪污几万都算大案了，如今动辄数亿人民币，这些天文数字的贪腐，印证了百姓所说的“无官不贪、官越大贪得越多”的潜规则。</p>
@@ -80,7 +80,7 @@
 <p>腐败治国已成为中共特征，也是该政治体制运行的必然。如今腐败毒瘤已扩散融合进每个细胞，成为中共生命的一部分。何清涟以中共已成“自利型政治集团”来描述中共，其害之烈，古今中外难有可望其项背者。这个不治之症给带来的危害将继续贻害中华，影响深远，故将中共治下之全面腐败，排在其恶行排名榜的第六位。◇</p>
 <p>====================================================================================</p>
 <p><b>恶行第5名 社会歧视</b></p>
-<p align="center"><img src="http://epochweek.com/141/33-01.jpg"><br /><font size=2>中共的天下是靠农民打下来的，但农民却在中共执政后遭受了最严重的歧视。（AFP）</p>
+<p align="center"> <br /><font size=2>中共的天下是靠农民打下来的，但农民却在中共执政后遭受了最严重的歧视。（AFP）</p>
 <p></font></p>
 <p><b><font size="5" color="#008080">中</font></b>共的天下是靠农民打下来的，但农民却在中共执政后遭受了最严重的歧视。农民没有医疗保险，没有失业救济，没有退休金，不能贷款。农民收入最低，而赋税最重。《中国农民调查》指出，当城镇居民年均收入超过一千美元时，其税赋不到五美元，而农民苦干一年的人均收入只有四百多人民币（是城里人收入的二百分之一），还不得不上缴一百五十多元的税收！</p>
 <p>这一切不公正都归功于中共的户籍制，人为的划分出贵贱两级。全世界的人在国内都可以自由的迁徙，只有中国、越南和朝鲜例外。无论农民进城还是外地人进京，没有暂住许可都属于国中之国的“非法移民”。在中共执政之前以及一九五四年的《宪法》都赋予“公民具有居住和迁徙的自由。”而一九五八年一月九日中共颁布的《中华人民共和国户口登记条例》，第一次以制度性歧视方式把农民排斥在城市之外，并开始了半个世纪对农民的额外盘剥。</p>
@@ -93,7 +93,7 @@
 <p>中国十三亿人口中九亿是农民，尽管农民作为弱势群体被外界忽视，但农民遭受的苦难无疑是中共恶行的重要证据。对国人进行制度性歧视的户籍制，在现代化国家中只有中国因中共的坚持而硕果仅存，因为这个制度而被歧视残害的人数规模庞大，故将这一制度列入中共恶行榜第五名。◇</p>
 <p>==================================================================================</p>
 <p><b>恶行第4名 破坏环境</b></p>
-<p align="center"><img src="http://epochweek.com/141/34-01.jpg"><br /><font size=2>中共“以粮为纲”的急功近利，大量森林、草场被破坏，土地荒漠化严重威胁到内地，沙尘暴天气不断增加。（Getty Images）</font></p>
+<p align="center"> <br /><font size=2>中共“以粮为纲”的急功近利，大量森林、草场被破坏，土地荒漠化严重威胁到内地，沙尘暴天气不断增加。（Getty Images）</font></p>
 <p><b><font size="5" color="#008080">二</font></b>零零六年世界卫生组织报告显示，全球污染最严重的二十个城市里中国占了十六个。二零零七年世界银行指出，中国每年因空气污染的死亡人数达三十五点八万，因水污染死亡六万人，环境损失达到每年一千亿美元，相对于中国GDP的5.8％。目前中国90％的河流被污染，四亿农村人没有清洁的饮用水，近90％的城市人呼吸的空气受污染。</p>
 <p>环境是人类赖以生存的基础。中共建政以来，在革命歌曲“我就是玉皇，我就是龙王，喝令三山五岭开道，我来了”的鼓舞下，开展了一系列“战天斗地”的暴行，特别是最近三十年当中国沦为世界廉价工厂之后，神舟大地遍体鳞伤，满目疮痍，中国生态已到了崩溃的边缘。</p>
 <p>二零零四年中国国家环保总局公布的污染损失达GDP的3％，有人计算达10％。中共一度提出要公布绿色GDP（减去环境污染损失后的GDP），但最终没有执行。仅管每年投入大量资金治理，但中国生态学会的评估是：“总体在恶化，局部在改善，治理能力远远赶不上破坏速度，生态赤字逐渐扩大。”</p>
@@ -104,7 +104,7 @@
 <p>目前中国每生产单位GDP消耗的资源为日本的七倍、美国的六倍、印度的三倍，而对于不可再生的宝贵资源，今天浪费了就等于霸占掠夺了子孙后代的财富，其后果是非常严重的。如今中共对中华大地肆意掠夺，长江大坝，南水北调，都是以万亿计的金钱图谋改变自然，其结果只能是继续污染和损害中国的整个生态环境，而且这种损害也必然祸延子孙后代。故将中共这一恶行排名为第四。◇</p>
 <p>====================================================================================</p>
 <p><b>恶行第3名 大饥荒饿死三千万</b></p>
-<p align="center"><img src="http://epochweek.com/141/35-01.jpg"><br /><font size=2>一九五八年中共提出要“跑步进入共产主义”，于是各地土法上马大炼钢铁，结果做饭的锅没了，炼出 一堆废铁。 （AFP）</font></p>
+<p align="center"> <br /><font size=2>一九五八年中共提出要“跑步进入共产主义”，于是各地土法上马大炼钢铁，结果做饭的锅没了，炼出 一堆废铁。 （AFP）</font></p>
 <p><b><font color="#008080", size="5">提</font></b>起中共恶行，人们最容易想到的是一九五九年后的三年里，全国范围内上演的“家家饿死人，村村人吃人”的悲剧，饿死了至少三千万人。据气象水文资料显示，那三年风调雨顺，并无天灾。近年来中共官方文献也把“三年自然灾害”改称为“三年困难时期”，暗示这场人类文明史上绝无仅有的灾难纯属人祸。《圣经》说：鸟儿不种地也不会饿死，那中国为什么会饿死那么多种地人呢？</p>
 <p>一九五八年中共提出要“跑步进入共产主义”，于是各地土法上马大炼钢铁，结果做饭的锅没了，炼出一堆废铁。在“亩产万斤”等浮夸风指使下，人们虚报粮食产量，一九五八年实际收获粮食两千亿公斤，却上报了四千两百五十亿公斤，在此虚报数据的基础上，中共制定了六项决定，其中包括：</p>
 <p>一，大办免费食堂：由于免费导致大量浪费，公共食堂两个多月便把平时一年的口粮吃光了。再饿也不许各家各户点火做饭，半夜里民兵还巡逻，发现谁家点火煮吃的，谁就会被抓，罪名是破坏人民公社大食堂。</p>
@@ -115,7 +115,7 @@
 <p>鉴于这场人类历史上绝无仅有的人祸，以及对三千万屈死者的纪念，把此事置于中共治政恶行排行榜的第三，相信并不为过。◇</p>
 <p>==================================================================================</p>
 <p><b>恶行第2名 文革浩劫</b></p>
-<p align="center"><img src="http://epochweek.com/141/36-01.jpg"><br /><font size=2>中共六十年暴政，从根本上毁灭了中国人的文化，中华民族现在是名存实亡，真正到了“最危急的时刻”。（AFP）</p>
+<p align="center"> <br /><font size=2>中共六十年暴政，从根本上毁灭了中国人的文化，中华民族现在是名存实亡，真正到了“最危急的时刻”。（AFP）</p>
 <p></font></p>
 <p><b><font size="5" color="#008080">一</font></b>九六六年至一九六七年的“无产阶级文化大革命”，被中共自己定性为“一场由领导者错误发动，被反革命集团利用，给党、国家和各族人民带来严重灾难的内乱。”有人这样描述文革：“这真是空前的一场浩劫。多少百万人连坐困顿，多少百万人含恨以终，多少家庭分崩离析，多少少年儿童变成了流氓恶棍，多少书籍被付之一炬，多少名胜古迹横遭破坏，多少先贤坟墓被挖掉，多少罪恶假革命之名以进行。”</p>
 <p>常听过来人说：“当时觉得很英明，事后才觉得很荒唐。”那时的“红卫兵”们动辄“贴大字报”搞“大串联”，用铜头皮带抽打老师，把女老师剃成“阴阳头”，把人拉到“斗争会”上挂黑牌、低头弯腰坐“喷气式”飞机，或扣上屎盆子游街示众，把“反动学术权威”和“当权派”囚禁在“牛棚”中，或跪在毛泽东像前“请罪”，那时“夫妻反目、兄弟成仇、互相揭批”、“造反有理”，人们“破四旧”、搞“武斗”、还跳“忠字舞”，“早请示、晚汇报”，敬祝“伟大领袖毛主席万岁万岁万万岁”，如此等等。</p>
@@ -127,7 +127,7 @@
 <p>文化，是一个民族之所以存在的灵魂，一旦文化被灭绝，民族也就名存实亡。五千年来，中国屡亡屡兴，文化不死国脉仍存。但中共六十年暴政，从根本上毁灭了中国人的文化，中华民族现在是名存实亡，真正到了“最危急的时刻”。而中共的“文化大革命”对此功不可没，因此完全应有资格排在该党窃国以来恶行的排名第二。◇</p>
 <p>====================================================================================</p>
 <p><b>恶行第1名 破坏信仰</b></p>
-<p align="center"><img src="http://epochweek.com/141/37-01.jpg"><br /><font size=2>中共在一九九九年七月二十日开始打压信仰“真善忍”的法轮功修炼者。（明慧网） </font></p>
+<p align="center"> <br /><font size=2>中共在一九九九年七月二十日开始打压信仰“真善忍”的法轮功修炼者。（明慧网） </font></p>
 <p><b><font size="5" color="#008080">信</font></b>仰是文化的基础。任何一个文明的生成发展和存在，首先是宗教和信仰的问题，它决定了人和人之间，人和天地万物之间的关系。这是人类文明的最大问题。</p>
 <p>中共对人间天堂共产主义的吹嘘和对暴力的崇拜，注定了它必然与传统信仰为敌。中共从建政之初就系统的消灭佛教、道教、儒教和基督教。或从外部强力消灭，或从内部瓦解颠覆，绝大多数道士、和尚尼姑、修士被赶走还俗，或冠以“地主、恶霸、反革命”的罪名被杀害。直到六、七十年代，中共监狱中约40％的犯人，依然是这些所谓的“会道门”人员。在中国民间和传统的信仰体系中，剩下的个别人物，无一不靠承认“中共是上帝的上帝、是佛祖的佛祖”的伪言生存，他们被立在那妆点门面、欺骗世人。</p>
 <p>信仰不但是连接天国与人间的桥梁，更是建立善恶好坏道德标准的基石。一个社会假如没有信仰的支撑，这个世界就会坍塌。中共所有恶行的最终目的就是让人抛弃正教信仰，被动或主动的信仰中共邪教。</p>
@@ -139,51 +139,46 @@
 <p>人类之所以出现文明，非在其经济发展和技术进步，而根本在于人类省悟了自我和外界的区别，而更以某种确定规范了限制自我和别人以及天地万物的关系。而由此，宗教和信仰成为人类文明的初始萌芽及核心，亦由此而才有文化生成。</p>
 <p>毁灭善念，毁灭天人关系，实际上是使人回到懵懂浑沌之初，回到血饮肉食的无尽争斗搏杀当中。故，此罪当名列中共窃国六十年以来诸多恶行之首。◇</p>
 <p>本文转自【新纪元周刊】139期“封面故事”栏目（2009/09/17出刊）<br /><ahref=" http://mag.epochtimes.com/141/index.md#1 "target="_blank"> http://mag.epochtimes.com/141/index.md#1 </a> <font color=#ffffff>(http://www.dajiyuan.com)</font></p>
-
+	
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/9/9/23/n2665521.md#1">北京南站大搜捕 外地访民被赶尽</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/9/9/22/n2664898.md#1">陈柏年：记录一甲子的悲情 中共为何惧怕？</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/9/9/22/n2664624.md#1">热比亚重申世维会决不采用暴力</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/9/9/21/n2664034.md#1">外电:中共建政六十年生日礼物——镇压</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/9/9/21/n2663674.md#1">赵增义：中共建政六十周年回顾</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/9/9/21/n2663357.md#1">唐理：国殇六十年 台湾明如鉴</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/9/9/20/n2663021.md#1">北京花四千万为“红袖标”着装</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/9/9/20/n2662975.md#1">霍明学：你们听着！</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/9/9/20/n2662874.md#1">【九评退党征文】金牌律师丧命于中国腐败的政法环境</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/9/9/20/n2662870.md#1">【九评退党征文】共产恶党是怎样骑在中国人头上的</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/9/17/n2660469.md#1">苦胆：是《建国大业》，还是《建政大业》？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/9/18/n2660880.md#1">中共窃国六十年研讨会 华府专家吁远离邪恶</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/9/18/n2661016.md#1">【九评退党征文】一个老共产党员心中的真理</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/9/18/n2661065.md#1">《九评退党征文》姥爷家六十年多舛命运记</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11935263.md#1">澳医学协会西澳主席：学校将关闭</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/8/6/n10619679.md#1" target="_blank">林辉：教授从练习低头弯腰到乐极生悲</a></li><li><a href="https://github.com/tjvrql262/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank">中共迫害良心律师</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/22/n11132948.md#1" target="_blank">93岁老人：李洪志大师给了我第二次生命</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank">揭开活摘器官黑幕</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/12/31/n11757068.md#1" target="_blank">王友群：面对“八国联军”清军为何兵败如山倒</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/10/1/n11559718.md#1" target="_blank">十一国殇日 港前区议员支持法轮功和平抗议</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11943071.md#1">【现场视频】武汉医生揭中共关闭方舱内幕</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942593.md#1">【疫情透视】港抗疫显奇迹 天灭中共成保命符</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942589.md#1">赵立坚甩锅病毒源自美国 艺人黄秋生狠酸中共</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11943151.md#1">美专家：中国恢复正常后或爆发新一波疫情</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/18/n11877949.md#1">古今中外预言中的2020年</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/9/n11926997.md#1">中国等国为何疫情严重？犹太拉比：神在除恶</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/29/n11905232.md#1">蝗虫群攻官府异象 为何吃尽画像人头？</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/9/n11925830.md#1">被扒皮的法官</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942373.md#1">图证蝗虫大军肆虐 中共急定预案恐难应对</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/14/n11940769.md#1">【新闻看点】病毒来自哪里？川普：中美都知道</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/14/n11941017.md#1">【现场视频】东莞虎门镇现大量防暴警察</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11944429.md#1">【直播回放】3.16新肺炎追踪：中共瞒疫情在美挨告</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11945531.md#1">武汉人斥官员：给你改正机会 谁给我活命机会</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11945347.md#1">武汉小区封楼20多天 又确诊2例 居民焦虑</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942589.md#1">赵立坚甩锅病毒源自美国 艺人黄秋生狠酸中共</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942781.md#1">潘迎紫呼吸道感染急就医 被要求检测新冠病毒</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942415.md#1">西班牙疫情大爆发 梁咏琪一家三口封城前返港</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11943288.md#1">古巨基宣布当爸 晒宝宝合照分享喜悦</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11943213.md#1">又一好莱坞明星确诊 007邦女郎隔离在家</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13675586.md#1">沉睡二千五百年绝世神剑  先进科技惊震天下</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/12/21/n13451605.md#1">【百年真相】到底谁是特务？延安整风内幕</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/25/n13671775.md#1">【战争随笔】基辅印象 温暖而有风度</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/18/n13656536.md#1">【百年真相】发言3分钟右派20年 朱镕基说了啥</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/2/n13690054.md#1">【车评】迷你快车 2022 MINI Cooper S</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689709.md#1">唐瑞讲故事｜朗读｜小熊维尼第五章</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688941.md#1">【秦鹏直播】乌克兰反攻开始？欧盟警告北京</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687190.md#1">王友群：朱镕基反对习近平三连任？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684346.md#1">应勇卸任湖北一把手 美分析师：是条大新闻</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13685194.md#1">上海防疫水深？ 张文宏消失 左派提路线斗争</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688133.md#1">台剧艺人陈熙锋喜迎千金 全程陪产记录感动</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684323.md#1">章子怡引对联悼东航空难 用词意外引热议</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687135.md#1">奥斯卡颁奖时挨史密斯一巴掌 洛克3天后首发声</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684458.md#1">90后杨紫粉丝闹乌龙 功夫影星杨紫琼登热搜</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687324.md#1">睽违18年再合作 梁朝伟刘德华新片造型曝光</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/28/n13677160.md#1">早餐来一杯治愈大脑！清除脑雾的方法</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683642.md#1">水果剥皮直接吃是错的！吃水果的7大误区</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/29/n13681028.md#1">提高抗氧化水平 维生素C的6大好处</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686139.md#1">研究：打新冠疫苗几个月后的心脏异常</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/28/n13677259.md#1">5种抗炎又给人饱腹感的零食</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/9/9/23/n2665536.htm">【新纪元】窃国六十年 中共十大恶行榜</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/9/9/23/n2665536.htm">【新纪元】窃国六十年 中共十大恶行榜</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/tjvrql262/djy/blob/master/gb/9/9/23/n2665536.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/tjvrql262/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/tjvrql262/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/9/9/23/n2665536.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
